@@ -2201,3 +2201,21 @@ div.lms-ui-wysiwyg-editor {
 		}
 	}
 }
+
+td.lms-ui-mac-address-selection {
+	padding: 0;
+}
+
+table.lms-ui-mac-address-selection {
+	.mac {
+		td .remove-mac {
+			visibility: hidden;
+			margin-left: -1.5em;
+			margin-top: 0.1em;
+		}
+		&:hover td .remove-mac {
+			visibility: visible;
+			cursor: pointer;
+		}
+	}
+}
