@@ -59,7 +59,9 @@
         filterNone: '{trans("<!filter>- none -")}',
 		multiSelectSubstMessage: '{trans("- \$a options selected -")}',
         eventWholeDays: '{trans("\$a days")}',
-        datePickerTooltip: '{trans("Click here to open calendar")}'
+        datePickerTooltip: '{trans("Click here to open calendar")}',
+		enterMacAddress: '{trans("Enter MAC address")}',
+		clickToSelectMac: '{trans("Click to select MAC from the list")}'
 	}
 
 	{if ConfigHelper::checkValue(ConfigHelper::getConfig('phpui.disable_mobile_tooltips', true))}
