@@ -1,11 +1,13 @@
 <!--// $Id$ //-->
 
 <style>
+
     .tab-beautify td { padding: 3px; }
     .tab-beautify tr td:nth-child(2) {
         font-weight: bold;
         white-space: nowrap;
     }
+
 </style>
 
 {include file="google-maps.html"}
@@ -97,17 +99,9 @@
 		<TD style="width: 1%;">
 			<IMG SRC="img/mac.gif" ALT="{trans("MAC address:")}">
 		</TD>
-		<TD style="width: 99%; white-space: nowrap;" COLSPAN="2">
-			<TABLE style="width: 100%;" cellpadding="1" cellspacing="0">
-				{foreach from=$nodedata.macs item=item key=key}
-				<TR ID="mac{$key}">
-					<TD style="width: 100%"><INPUT TYPE="TEXT" NAME="nodedata[macs][{$key}]" VALUE="{$item}" required {tip text="Enter MAC address" trigger="mac`$key`"}> <a href="javascript:void(0);" onClick="return macchoosewin(document.nodeadd.elements['nodedata[macs][{$key}]']);" {tip text="Click to select MAC from the list"}>&raquo;&raquo;&raquo;</A></TD>
-				</TR>
-				{/foreach}
-			</TABLE>
-			<INPUT TYPE="HIDDEN" ID="macscount" VALUE="{$item@total}">
-			<A href="javascript:newmac()">{trans("Add MAC address")} &raquo;&raquo;&raquo;</A>
-		</TD>
+		<td style="width: 99%;" class="lms-ui-mac-address-selection nobr" COLSPAN="2">
+			{mac_address_selection form="nodedata" macs=$nodedata.macs}
+		</td>
 	</TR>
 	<TR>
 		<TD style="width: 1%;">
@@ -318,6 +312,7 @@
 				$('#projectname').hide();
 			}
 		});
+
 	});
 
 	function GenPasswd() {
@@ -326,25 +321,6 @@
 
 		document.forms['nodeadd'].elements['nodedata[passwd]'].value =
 			generate_random_string(length, "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789");
-	}
-
-	function newmac()
-	{
-		var macscountelem = document.getElementById('macscount');
-		var nr = macscountelem.value;
-		var lastmacelem = document.getElementById('mac' + (nr - 1));
-		var newrow = lastmacelem.parentNode.insertRow(lastmacelem.rowIndex + 1);
-		newrow.id = 'mac' + nr;
-		var newcell = newrow.insertCell(0);
-		newcell.style.width = '100%';
-		newcell.innerHTML = '<input type="text" name="nodedata[macs][' + nr + ']" value=""'
-			+ ' title="{trans("Enter MAC address")}">'
-			+ '<a href="javascript:void(0);" onClick="return macchoosewin(document.nodeadd.elements[\'nodedata[macs][' + nr + ']\']);"'
-			+ ' title="{trans("Click to select MAC from the list")}">&nbsp;&raquo;&raquo;&raquo;</a>';
-		$(newcell).children("[title]").tooltip({
-			position: { my: "left top" }
-		});
-		macscountelem.value = parseInt(nr) + 1;
 	}
 
 	function change_wholenetwork() {
