@@ -1,11 +1,13 @@
 <!--// $Id$ //-->
 
 <style>
-    .tab-beautify td { padding: 3px; }
-    .tab-beautify tr td:nth-child(2) {
-        font-weight: bold;
-        white-space: nowrap;
-    }
+
+	.tab-beautify td { padding: 3px; }
+	.tab-beautify tr td:nth-child(2) {
+		font-weight: bold;
+		white-space: nowrap;
+	}
+
 </style>
 
 {include file="google-maps.html"}
@@ -117,18 +119,8 @@
 									<td>
 										{trans("MAC address:")}
 									</td>
-									<td class="nobr">
-										<table style="width: 100%;" cellpadding="1" cellspacing="0">
-										{foreach from=$nodeinfo.macs item=item key=key}
-											<tr id="mac{$key}">
-												<td style="width: 100%;">
-													<input type="text" name="nodeedit[macs][{$key}]" value="{$item}" required {tip text="Enter MAC address" trigger="mac`$key`"}> <a href="javascript: void(0);" onClick="return macchoosewin(document.editnode.elements['nodeedit[macs][{$key}]']);" {tip text="Click to select MAC from the list"}>&raquo;&raquo;&raquo;</a>
-												</td>
-											</tr>
-										{/foreach}
-										</table>
-										<input type="hidden" id="macscount" value="{$item@total}">
-										<A href="javascript: newmac()">{trans("Add MAC address")} &raquo;&raquo;&raquo;</A>
+									<td class="nobr" class="lms-ui-mac-address-selection">
+										{mac_address_selection form="nodeedit" macs=$nodeinfo.macs}
 									</td>
 								</tr>
 
@@ -399,7 +391,7 @@
 </table>
 </form>
 
-<script type="text/javascript">
+<script>
 
 	$(function() {
 		$('form[name="editnode"] [name="nodeedit[name]"]').focus();
@@ -464,24 +456,6 @@
 
 		event.preventDefault();
 	});
-
-	function newmac() {
-		var macscountelem = document.getElementById('macscount');
-		var nr = macscountelem.value;
-		var lastmacelem = document.getElementById('mac' + (nr - 1));
-		var newrow = lastmacelem.parentNode.insertRow(lastmacelem.rowIndex + 1);
-		newrow.id = 'mac' + nr;
-		var newcell = newrow.insertCell(0);
-		newcell.style.width = '100%';
-		newcell.innerHTML = '<input type="TEXT" name="nodeedit[macs][' + nr + ']" value=""'
-			+ ' title="{trans("Enter MAC address")}">'
-			+ '<a href="javascript: void(0);" onClick="return macchoosewin(document.editnode.elements[\'nodeedit[macs][' + nr + ']\']);"'
-			+ ' title="{trans("Click to select MAC from the list")}">&nbsp;&raquo;&raquo;&raquo;</A>';
-		$(newcell).children("[title]").tooltip({
-			position: { my: "left top" }
-		});
-		macscountelem.value = parseInt(nr) + 1;
-	}
 
 	function change_netdevice(id) {
 		if (xjx.$('linktype').value == 1) {
@@ -603,5 +577,4 @@
         customer_addresses.init();
     });
 
-</SCRIPT>
-
+</script>
